--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class=body>
   <h1 class=wh>About me</h1>
   <p class=or >Who are you?</p>
-  <p class=aqua>My username is Mik and i am learning to code</p>
+  <p class=aqua>My username is scihb and i am learning to code</p>
   <p class=or>What is this site?</p>
   <p class=aqua>This is a site about me, this is for websites (e.g. discord)</p>
   <p class=or>Where can i learn to code?</p>
