--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p class= aqua>On youtube, and more</p>
   <h2 class=gr>DM ME FOR MORE QUESTIONS AND I WILL MAYBE ANSWER THEM IN THIS WEBSITE!</h2>
   <p class=wh> if you want to show of ur devlopement skills, go on the tgds(ial)</p>
-  <button class=bpr><a href="https://discord.gg/MGTYdS5g">Go to the discord </a></button>
+  <button class=bpr><a href="https://discord.com/invite/BX3Kww4W55">Go to the discord </a></button>
   <script src="script.js"></script>
 </body>
 
